@@ -1,0 +1,6 @@
+<?xml version="1.0"?>
+<roots>
+ <object name="members"/>
+ <object name="sections"/>
+ <object name="workspaces"/>
+</roots>
