@@ -1,0 +1,4 @@
+<?xml version="1.0"?>
+<object name="members">
+ <rolemap file="rolemap.xml"/>
+</object>
